[metadata]
name = cryptoreport
version = 0.0.1
description = "Cryptoreport"

[options]
install_requires =
   truflation-data@git+https://github.com/truflation/truflation.git
   python-dotenv
   docopt
   pathlib

package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.package_data]
cryptoreport = py.typed
